# jot

./: .gitignore  CLAUDE.md  README.md  TODO.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
apps/desktop/: package.json  tailwind.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/components/: GalleryView.tsx  JotCard.tsx  MicButton.tsx  RecordView.tsx  SettingsPanel.tsx
apps/desktop/src/db/: index.ts
apps/desktop/src/hooks/: useSilenceDetection.ts  useTranscription.ts
apps/desktop/src/storage/: secrets.ts
apps/desktop/src/store/: index.ts
apps/desktop/src/sync/: github.ts  obsidian.ts  types.ts
apps/mobile/: App.tsx  app.json  package.json  tailwind.config.js
apps/mobile/src/db/: index.native.ts  index.ts  index.web.ts
apps/mobile/src/engines/: elevenLabs.ts  recorder.native.ts  recorder.web.ts  types.ts  whisper.ts
apps/mobile/src/hooks/: useRecording.ts  useSilenceDetection.ts  useTranscription.native.ts  useTranscription.ts  useTranscription.web.ts  web-speech.d.ts
apps/mobile/src/storage/: secrets.native.ts  secrets.ts  secrets.web.ts
apps/mobile/src/store/: index.ts
apps/mobile/src/sync/: github.ts
apps/mobile/src/utils/: time.ts  title.ts
apps/mobile/tempates/: gh-doc-template.md
scripts/: build-dmg.sh
